--- a/new-shop.html
+++ b/new-shop.html
@@ -24,7 +24,7 @@
             </div>
         </header>
 
-        <ul class="new-shop_tab">
+        <ul class="new-shop_tabb">
             <li>每週推薦</li>
             <li>品牌推薦</li>
             <li>點數20%回饋</li>
