--- a/rank.html
+++ b/rank.html
@@ -66,11 +66,151 @@
                         <h3 class="rank_name">化學課</h3>
                         <p class="rank_origin">343元</p>
                         <div class="d-flex align-items-end">
-                            <p class="rank_newprice">343元</p>
+                            <p class="rank_newprice"><span>343</span>元</p>
                             <div class="rank_tag">特價</div>
                         </div>
                     </div>
                 </a>
+                <a href="" class="rank_item">
+                    <div class="rank_num">
+                        <svg class="rank_num_icon num-2" version="1.1" id="fi_773634" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <path d="M504.981,150.787c-6.048-5.163-14.583-6.251-21.736-2.769l-109.444,53.28L271.109,82.896
+                                        C267.311,78.516,261.798,76,256,76c-5.798,0-11.31,2.516-15.109,6.896L138.199,201.297l-109.444-53.28
+                                        c-7.153-3.481-15.687-2.394-21.737,2.769c-6.05,5.163-8.466,13.421-6.153,21.031l76,250C79.426,430.242,87.195,436,96,436h320
+                                        c8.804,0,16.574-5.758,19.134-14.182l76-250C513.448,164.208,511.032,155.95,504.981,150.787z M401.175,396H110.823
+                                        L52.472,204.052l82.022,39.931c8.144,3.964,17.93,1.962,23.863-4.878L256,126.525l97.644,112.58
+                                        c5.932,6.841,15.721,8.841,23.862,4.878l82.022-39.931L401.175,396z"></path>
+                                </g>
+                            </g>
+                            <g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
+                        </svg>
+                        <p>2</p>
+                    </div>
+                    <div class="rank_pic">
+                        <div class="product-pic contain">
+                            <img src="https://tshop.r10s.com/73f/d9d/3397/f5be/b084/03cd/079c/110eef84b70242ac110002.jpg?_ex=200x200" alt="" class="product-pic_img">
+                        </div>
+                    </div>
+                    <div class="rank_text">
+                        <p class="rank_shop">樂天KOBO電子書</p>
+                        <h3 class="rank_name">化學課</h3>
+                        <p class="rank_origin">343元</p>
+                        <div class="d-flex align-items-end">
+                            <p class="rank_newprice"><span>343</span>元</p>
+                            <div class="rank_tag">特價</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="" class="rank_item">
+                    <div class="rank_num">
+                        <svg class="rank_num_icon num-3" version="1.1" id="fi_773634" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <path d="M504.981,150.787c-6.048-5.163-14.583-6.251-21.736-2.769l-109.444,53.28L271.109,82.896
+                                        C267.311,78.516,261.798,76,256,76c-5.798,0-11.31,2.516-15.109,6.896L138.199,201.297l-109.444-53.28
+                                        c-7.153-3.481-15.687-2.394-21.737,2.769c-6.05,5.163-8.466,13.421-6.153,21.031l76,250C79.426,430.242,87.195,436,96,436h320
+                                        c8.804,0,16.574-5.758,19.134-14.182l76-250C513.448,164.208,511.032,155.95,504.981,150.787z M401.175,396H110.823
+                                        L52.472,204.052l82.022,39.931c8.144,3.964,17.93,1.962,23.863-4.878L256,126.525l97.644,112.58
+                                        c5.932,6.841,15.721,8.841,23.862,4.878l82.022-39.931L401.175,396z"></path>
+                                </g>
+                            </g>
+                            <g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
+                        </svg>
+                        <p>3</p>
+                    </div>
+                    <div class="rank_pic">
+                        <div class="product-pic contain">
+                            <img src="https://tshop.r10s.com/73f/d9d/3397/f5be/b084/03cd/079c/110eef84b70242ac110002.jpg?_ex=200x200" alt="" class="product-pic_img">
+                        </div>
+                    </div>
+                    <div class="rank_text">
+                        <p class="rank_shop">樂天KOBO電子書</p>
+                        <h3 class="rank_name">化學課</h3>
+                        <p class="rank_origin">343元</p>
+                        <div class="d-flex align-items-end">
+                            <p class="rank_newprice"><span>343</span>元</p>
+                            <div class="rank_tag">特價</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="" class="rank_item">
+                    <div class="rank_num">
+                        <p>4</p>
+                    </div>
+                    <div class="rank_pic">
+                        <div class="product-pic contain">
+                            <img src="https://tshop.r10s.com/73f/d9d/3397/f5be/b084/03cd/079c/110eef84b70242ac110002.jpg?_ex=200x200" alt="" class="product-pic_img">
+                        </div>
+                    </div>
+                    <div class="rank_text">
+                        <p class="rank_shop">樂天KOBO電子書</p>
+                        <h3 class="rank_name">化學課</h3>
+                        <p class="rank_origin">343元</p>
+                        <div class="d-flex align-items-end">
+                            <p class="rank_newprice"><span>343</span>元</p>
+                            <div class="rank_tag">特價</div>
+                        </div>
+                    </div>
+                </a>
+                <a href="" class="rank_item">
+                    <div class="rank_num">
+                        <p>5</p>
+                    </div>
+                    <div class="rank_pic">
+                        <div class="product-pic contain">
+                            <img src="https://tshop.r10s.com/73f/d9d/3397/f5be/b084/03cd/079c/110eef84b70242ac110002.jpg?_ex=200x200" alt="" class="product-pic_img">
+                        </div>
+                    </div>
+                    <div class="rank_text">
+                        <p class="rank_shop">樂天KOBO電子書</p>
+                        <h3 class="rank_name">化學課</h3>
+                        <p class="rank_origin">343元</p>
+                        <div class="d-flex align-items-end">
+                            <p class="rank_newprice"><span>343</span>元</p>
+                            <div class="rank_tag">特價</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="hot-topic pt-3">
+            <div class="container">
+                <h2 class="title">熱門活動</h2>
+            </div>
+            <div class="bg-white">
+                <div class="hot-topic_item">
+                    <a href="" class="hot-topic_title">
+                        <h3>熱門活動</h3>
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+                <div class="hot-topic_item">
+                    <a href="" class="hot-topic_title">
+                        <h3>熱門活動</h3>
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+                <div class="hot-topic_item">
+                    <a href="" class="hot-topic_title">
+                        <h3>熱門活動</h3>
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+                <div class="hot-topic_item">
+                    <a href="" class="hot-topic_title">
+                        <h3>熱門活動</h3>
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+                <div class="hot-topic_item">
+                    <a href="" class="hot-topic_title">
+                        <h3>熱門活動</h3>
+                        <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
             </div>
         </div>
 
