--- a/coupon.html
+++ b/coupon.html
@@ -25,7 +25,7 @@
                             <i class="bi bi-person"></i>
                             <span>會員中心</span>
                         </a>
-                        <a href="" class="header-search_link ms-3">
+                        <a href="./cart.html" class="header-search_link ms-3">
                             <i class="bi bi-cart2"></i>
                             <span>購物車</span>
                         </a>
