--- a/new-shop.html
+++ b/new-shop.html
@@ -40,7 +40,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-6">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="new-shop_brand">川谷精油植萃香芬沐浴露</div>
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
@@ -61,7 +61,7 @@
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="new-shop_brand">川谷精油植萃香芬沐浴露</div>
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
@@ -82,7 +82,7 @@
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="new-shop_brand">川谷精油植萃香芬沐浴露</div>
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
@@ -103,7 +103,7 @@
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="new-shop_brand">川谷精油植萃香芬沐浴露</div>
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
@@ -124,7 +124,7 @@
                             </a>
                         </div>
                         <div class="col-6">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="new-shop_brand">川谷精油植萃香芬沐浴露</div>
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
@@ -156,7 +156,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
@@ -176,7 +176,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
@@ -186,7 +186,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
@@ -196,7 +196,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
@@ -206,7 +206,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="new-shop_item">
+                            <a href="./product-detail.html" class="new-shop_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/94f/f50/525b/266b/6046/82c2/3ae2/11eaeba59d0242ac110004.jpg" alt="">
                                 </div>
