--- a/product-detail.html
+++ b/product-detail.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <a href=""><i class="bi bi-person"></i></a>
-                        <a href="" class="header_cart ms-4">
+                        <a href="./cart.html" class="header_cart ms-4">
                             <i class="bi bi-cart2"></i>
                             <div class="header_cart_num">1</div>
                         </a>
@@ -40,37 +40,37 @@
             <div class="topNav_inner d-flex align-items-center">
                 <ul class="d-flex align-items-center">
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/delivery-truck.svg" alt="">
                             <span>299免運</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/burger.svg" alt="">
                             <span>美食</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/medicine.svg" alt="">
                             <span>保健</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/delivery-truck.svg" alt="">
                             <span>299免運</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/burger.svg" alt="">
                             <span>美食</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/medicine.svg" alt="">
                             <span>保健</span>
                         </a>
@@ -81,37 +81,37 @@
                 <div class="topNav_menu">
                     <div class="row">
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/delivery-truck.svg" alt="">
                                 <span>299免運</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/burger.svg" alt="">
                                 <span>美食</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/medicine.svg" alt="">
                                 <span>保健</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/delivery-truck.svg" alt="">
                                 <span>299免運</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/burger.svg" alt="">
                                 <span>美食</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/medicine.svg" alt="">
                                 <span>保健</span>
                             </a>
@@ -124,7 +124,7 @@
         <div class="breadcrumb m-0">
             <div class="container">
                 <ul class="d-flex">
-                    <li><a href="">樂天首頁</a></li>
+                    <li><a href="./index.html">樂天首頁</a></li>
                     <li><i class="bi bi-chevron-right"></i></li>
                     <li><a href="">流行女裝</a></li>
                     <li><i class="bi bi-chevron-right"></i></li>
@@ -134,7 +134,7 @@
                     <li><i class="bi bi-chevron-right"></i></li>
                     <li><a href="">五分袖T恤</a></li>
                     <li><i class="bi bi-chevron-right"></i></li>
-                    <li><a href="" class="active">a la sha</a></li>
+                    <li><a class="active">a la sha</a></li>
                 </ul>
             </div>
         </div>
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="" class="product-detail_shop_btn">逛店舖</a>
+                <a href="./shop.html" class="product-detail_shop_btn">逛店舖</a>
             </div>
             <div class="d-flex align-items-center justify-content-between">
                 <div class="product-detail_shop_class d-flex align-items-center">
@@ -356,7 +356,7 @@
             <div class="swiper-container product-detail_recommend_swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -373,7 +373,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -390,7 +390,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -407,7 +407,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -424,7 +424,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -450,7 +450,7 @@
                 <span class="font-12 color-99 ms-2">排名期間：2024/6/4 - 2024/6/11</span>
             </div>
             <div class="p-3 bg-white">
-                <a href="" class="product-detail_hot_item">
+                <a href="./product-detail.html" class="product-detail_hot_item">
                     <div class="product-detail_hot_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/f60/0c8/e803/b249/3077/7e14/e3c3/117aeea7240242ac110004.jpg?_ex=330x330" alt="">
@@ -468,7 +468,7 @@
                         <div class="product-2nd_tag">滿1000免運</div>
                     </div>
                 </a>
-                <a href="" class="product-detail_hot_item">
+                <a href="./product-detail.html" class="product-detail_hot_item">
                     <div class="product-detail_hot_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/f60/0c8/e803/b249/3077/7e14/e3c3/117aeea7240242ac110004.jpg?_ex=330x330" alt="">
@@ -486,7 +486,7 @@
                         <div class="product-2nd_tag">滿1000免運</div>
                     </div>
                 </a>
-                <a href="" class="product-detail_hot_item">
+                <a href="./product-detail.html" class="product-detail_hot_item">
                     <div class="product-detail_hot_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/f60/0c8/e803/b249/3077/7e14/e3c3/117aeea7240242ac110004.jpg?_ex=330x330" alt="">
@@ -504,7 +504,7 @@
                         <div class="product-2nd_tag">滿1000免運</div>
                     </div>
                 </a>
-                <a href="" class="product-detail_hot_item">
+                <a href="./product-detail.html" class="product-detail_hot_item">
                     <div class="product-detail_hot_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/f60/0c8/e803/b249/3077/7e14/e3c3/117aeea7240242ac110004.jpg?_ex=330x330" alt="">
@@ -522,7 +522,7 @@
                         <div class="product-2nd_tag">滿1000免運</div>
                     </div>
                 </a>
-                <a href="" class="product-detail_hot_item">
+                <a href="./product-detail.html" class="product-detail_hot_item">
                     <div class="product-detail_hot_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/f60/0c8/e803/b249/3077/7e14/e3c3/117aeea7240242ac110004.jpg?_ex=330x330" alt="">
@@ -540,7 +540,7 @@
                         <div class="product-2nd_tag">滿1000免運</div>
                     </div>
                 </a>
-                <a href="" class="product-detail_evaluate_more d-flex justify-content-center align-items-center mt-3">
+                <a href="./product-detail.html" class="product-detail_evaluate_more d-flex justify-content-center align-items-center mt-3">
                     <span>查看更多</span>
                     <i class="bi bi-chevron-down"></i>
                 </a>
@@ -552,7 +552,7 @@
             <div class="swiper-container product-detail_new_swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -569,7 +569,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -586,7 +586,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -603,7 +603,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
@@ -620,7 +620,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="" class="product-commonItem">
+                        <a href="./product-detail.html" class="product-commonItem">
                             <div class="product-pic">
                                 <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                             </div>
