--- a/search-result.html
+++ b/search-result.html
@@ -23,7 +23,7 @@
                             <i class="bi bi-person"></i>
                             <span>會員中心</span>
                         </a>
-                        <a href="" class="header-search_link ms-3">
+                        <a href="./cart.html" class="header-search_link ms-3">
                             <i class="bi bi-cart2"></i>
                             <span>購物車</span>
                         </a>
@@ -77,7 +77,7 @@
                 </ul>
 
                 <div class="pt-3">
-                    <a href="" class="search-result_item">
+                    <a href="./product-detail.html" class="search-result_item">
                         <div class="search-result_pic">
                             <div class="product-pic">
                                 <img class="product-pic_img contain" src="https://tshop.r10s.com/641/942/40d0/55db/0075/d324/344c/1122ed9e540242ac110002.jpg" alt="">
@@ -88,7 +88,7 @@
                             <p>台灣樂天市場</p>
                         </div>
                     </a>
-                    <a href="" class="search-result_item">
+                    <a href="./product-detail.html" class="search-result_item">
                         <div class="search-result_pic">
                             <div class="product-pic">
                                 <img class="product-pic_img contain" src="https://tshop.r10s.com/641/942/40d0/55db/0075/d324/344c/1122ed9e540242ac110002.jpg" alt="">
@@ -99,7 +99,7 @@
                             <p>台灣樂天市場</p>
                         </div>
                     </a>
-                    <a href="" class="search-result_item">
+                    <a href="./product-detail.html" class="search-result_item">
                         <div class="search-result_pic">
                             <div class="product-pic">
                                 <img class="product-pic_img contain" src="https://tshop.r10s.com/641/942/40d0/55db/0075/d324/344c/1122ed9e540242ac110002.jpg" alt="">
@@ -110,7 +110,7 @@
                             <p>台灣樂天市場</p>
                         </div>
                     </a>
-                    <a href="" class="search-result_item">
+                    <a href="./product-detail.html" class="search-result_item">
                         <div class="search-result_pic">
                             <div class="product-pic">
                                 <img class="product-pic_img contain" src="https://tshop.r10s.com/641/942/40d0/55db/0075/d324/344c/1122ed9e540242ac110002.jpg" alt="">
@@ -121,7 +121,7 @@
                             <p>台灣樂天市場</p>
                         </div>
                     </a>
-                    <a href="" class="search-result_item">
+                    <a href="./product-detail.html" class="search-result_item">
                         <div class="search-result_pic">
                             <div class="product-pic">
                                 <img class="product-pic_img contain" src="https://tshop.r10s.com/641/942/40d0/55db/0075/d324/344c/1122ed9e540242ac110002.jpg" alt="">
