--- a/product-2nd-3rd.html
+++ b/product-2nd-3rd.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <a href=""><i class="bi bi-person"></i></a>
-                        <a href="" class="header_cart ms-4">
+                        <a href="./cart.html" class="header_cart ms-4">
                             <i class="bi bi-cart2"></i>
                             <div class="header_cart_num">1</div>
                         </a>
@@ -40,37 +40,37 @@
             <div class="topNav_inner d-flex align-items-center">
                 <ul class="d-flex align-items-center">
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/delivery-truck.svg" alt="">
                             <span>299免運</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/burger.svg" alt="">
                             <span>美食</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/medicine.svg" alt="">
                             <span>保健</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/delivery-truck.svg" alt="">
                             <span>299免運</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/burger.svg" alt="">
                             <span>美食</span>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./product-1st.html">
                             <img src="./public/img/medicine.svg" alt="">
                             <span>保健</span>
                         </a>
@@ -81,37 +81,37 @@
                 <div class="topNav_menu">
                     <div class="row">
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/delivery-truck.svg" alt="">
                                 <span>299免運</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/burger.svg" alt="">
                                 <span>美食</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/medicine.svg" alt="">
                                 <span>保健</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/delivery-truck.svg" alt="">
                                 <span>299免運</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/burger.svg" alt="">
                                 <span>美食</span>
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="">
+                            <a href="./product-1st.html">
                                 <img src="./public/img/medicine.svg" alt="">
                                 <span>保健</span>
                             </a>
@@ -124,9 +124,9 @@
         <div class="breadcrumb m-0">
             <div class="container">
                 <ul class="d-flex flex-wrap">
-                    <li><a href="">樂天首頁</a></li>
+                    <li><a href="./index.html">樂天首頁</a></li>
                     <li><i class="bi bi-chevron-right"></i></li>
-                    <li><a href="" class="active">流行女裝</a></li>
+                    <li><a class="active">流行女裝</a></li>
                 </ul>
             </div>
         </div>
@@ -175,7 +175,7 @@
                 <div class="swiper-container product-2nd_class_swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -183,7 +183,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -191,7 +191,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -199,7 +199,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -207,7 +207,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -215,7 +215,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -223,7 +223,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-2nd_class_item">
+                            <a href="./product-2nd-3rd.html" class="product-2nd_class_item">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://cont001.ias.global.rakuten.com/tw/ec/creative/dst/1000001522/197097/501899/20f7097401cb3a78e87d8ae6ec50e7754d552ec2.jpg" alt="">
                                 </div>
@@ -237,7 +237,7 @@
 
         <div class="product-2nd_list py-3">
             <div class="container">
-                <a href="" class="product-2nd_list_item">
+                <a href="./product-detail.html" class="product-2nd_list_item">
                     <div class="product-2nd_list_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/10d/343/21b6/adf1/103a/24b1/83e5/1193efa7640242ac110002.jpg?_ex=200x200" alt="">
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="product-2nd_list_item">
+                <a href="./product-detail.html" class="product-2nd_list_item">
                     <div class="product-2nd_list_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/10d/343/21b6/adf1/103a/24b1/83e5/1193efa7640242ac110002.jpg?_ex=200x200" alt="">
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="product-2nd_list_item">
+                <a href="./product-detail.html" class="product-2nd_list_item">
                     <div class="product-2nd_list_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/10d/343/21b6/adf1/103a/24b1/83e5/1193efa7640242ac110002.jpg?_ex=200x200" alt="">
@@ -327,7 +327,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="product-2nd_list_item">
+                <a href="./product-detail.html" class="product-2nd_list_item">
                     <div class="product-2nd_list_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/10d/343/21b6/adf1/103a/24b1/83e5/1193efa7640242ac110002.jpg?_ex=200x200" alt="">
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="product-2nd_list_item">
+                <a href="./product-detail.html" class="product-2nd_list_item">
                     <div class="product-2nd_list_pic">
                         <div class="product-pic">
                             <img class="product-pic_img" src="https://tshop.r10s.com/10d/343/21b6/adf1/103a/24b1/83e5/1193efa7640242ac110002.jpg?_ex=200x200" alt="">
@@ -416,7 +416,7 @@
                 <div class="swiper-container product-2nd_rank_swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -438,7 +438,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -460,7 +460,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -482,7 +482,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -504,7 +504,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -536,7 +536,7 @@
                 <div class="swiper-container product-2nd_like_swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -558,7 +558,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -580,7 +580,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -602,7 +602,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -624,7 +624,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="" class="product-commonItem">
+                            <a href="./product-detail.html" class="product-commonItem">
                                 <div class="product-pic">
                                     <img class="product-pic_img" src="https://tshop.r10s.com/7f3/e94/4bd3/880b/d0fa/2730/96df/1151efbad20242ac110003.jpg?_ex=200x200" alt="">
                                 </div>
@@ -789,10 +789,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
 
         <footer class="footer product-2nd_footer">
             <div class="container">
