--- a/product-1st.html
+++ b/product-1st.html
@@ -19,7 +19,7 @@
                 <div class="py-2 d-flex align-items-center justify-content-between">
                     <a href="./index.html" class="header-search_logo"><img src="./public/img/og_logo.png" alt=""></a>
                     <div class="d-flex align-items-center">
-                        <a href="" class="header-search_link">
+                        <a href="./member.html" class="header-search_link">
                             <i class="bi bi-person"></i>
                             <span>會員中心</span>
                         </a>
