--- a/search.html
+++ b/search.html
@@ -17,10 +17,10 @@
         <header class="header">
             <div class="container">
                 <div class="header_search-wrap pt-2 d-flex align-items-center">
-                    <div class="header_search d-flex align-items-center">
+                    <a href="./search.html" class="header_search d-flex align-items-center">
                         <input type="text" placeholder="請輸入書名、作者、ISBN...">
                         <button><i class="bi bi-search"></i></button>
-                    </div>
+                    </a>
                     <button class="header_search_cancel">取消</button>
                 </div>
             </div>
