--- a/dicsount.html
+++ b/dicsount.html
@@ -24,17 +24,17 @@
                         <img class="header_logo ms-3" src="./public/img/logo.png" alt="">
                     </div>
                     <div class="d-flex align-items-center">
-                        <a href=""><i class="bi bi-person"></i></a>
+                        <a href="./member.html"><i class="bi bi-person"></i></a>
                         <a href="./cart.html" class="header_cart ms-4">
                             <i class="bi bi-cart2"></i>
                             <div class="header_cart_num">1</div>
                         </a>
                     </div>
                 </div>
-                <div class="header_search d-flex align-items-center">
+                <a href="./search.html" class="header_search d-flex align-items-center">
                     <input type="text" placeholder="請輸入關鍵字">
                     <button><i class="bi bi-search"></i></button>
-                </div>
+                </a>
             </div>
         </header>
 
