--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
                         <img class="header_logo ms-3" src="./public/img/logo.png" alt="">
                     </div>
                     <div class="d-flex align-items-center">
-                        <a href=""><i class="bi bi-person"></i></a>
+                        <a href="./member.html"><i class="bi bi-person"></i></a>
                         <a href="./cart.html" class="header_cart ms-4">
                             <i class="bi bi-cart2"></i>
                             <div class="header_cart_num">1</div>
